--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-#main{
+/* first styling */
+
+/* #main{
     display: flex;
     flex-direction: column; 
     width: 400px; 
@@ -81,7 +83,6 @@
     opacity: 0.7;
 }
 
-
 .dropdown-content  {
     position: absolute;
     background-color: #f9f9f9;
@@ -125,14 +126,14 @@ background-color: #ddd;
 
 #send:active{
     opacity: 0.7;
-}
+} */
 
 
  
+/* second styling */
 
 
-
- /* #main{
+#main{
     display: flex;
     flex-direction: column; 
     width: 400px; 
@@ -262,4 +263,4 @@ background-color: #ddd;
 #send:active{
     box-shadow:none;
 }
- */
+
